assets/styles/all.scss
---
---

@charset "utf-8";

@import 'fonts';
@import 'reset';
@import 'mixins';
@import 'variables';
// @import 'animations';

// base
// ----

*,
*:before,
*:after {
  box-sizing: inherit;
}
html {
  box-sizing: border-box;
  font-size: $font-size--html;
  @media (max-width: $bp-sm-md) {
    font-size: $font-size--html-md;
  }
}
body {
  font-size: $font-size--normal;
  font-family: $font-family--body;
  line-height: $line-height--normal;
  -webkit-font-smoothing: antialiased;
  -font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: $color--white;
  color: $color--black;
}
img,
video,
iframe {
  max-width: 100%;
}
img,
video {
  height: auto;
}
a {
  text-decoration: none;
  color: inherit;
}

// typography
// ----------

strong,
.strong,
b {
  font-weight: bold;
}
em,
i {
  font-style: italic;
}
pre,
code,
kbd,
samp {
  font-family: $font-family--monospace;
  overflow: auto;
  white-space: pre;
}
pre {
  padding: $v/2;
}
pre,
code {
  background-color: $color--silver;
}

// rich text editor
// ----------------

.rte {
  a {
    @extend .underlined;
    @extend .fade;
  }
  .logo {
    opacity: $opacity--logo;
    &:hover {
      opacity: $opacity--slightly-faded;
    }
    border-bottom: none;
    display: block;
  }
  h1,
  h2,
  h3 {
    &:not(:first-child) {
      margin-top: $v*1.5;
    }
  }
  h1,
  h2,
  h3 {
    @extend strong;
  }
  .h1,
  h1 {
    font-size: 2em;
    line-height: 1.2;
    @media (max-width: $bp-sm-md) {
      font-size: 1.75em;
    }
  }
  .h2,
  h2 {
    font-size: 1.5em;
    line-height: 1.2;
    @media (max-width: $bp-sm-md) {
      font-size: 1.333333em;
    }
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin-bottom: $v*0.5;
  }
  h4,
  h5,
  h6 {
    @extend .faded;
  }
  p,
  ul,
  ol,
  blockquote,
  pre,
  table,
  img,
  .img,
  video,
  iframe {
    margin-bottom: $v;
  }
  img,
  .img,
  video,
  iframe {
    display: block;
  }
  blockquote {
    @extend em;
    em {
      font-style: normal;
    }
    border-left: 1px solid $color--black;
  }
  blockquote {
    padding-left: calc(1em - 1px);
  }
  ol,
  ul {
    ul,
    ol {
      margin-bottom: 0;
    }
    ul {
      list-style-type: circle;
    }
  }
  ol {
    padding-left: 1.75em;
    list-style-type: decimal;
    li {
      padding-left: 0.25em;
    }
  }
  ul {
    padding-left: 1.5em;
    list-style-type: disc;
  }
  table {
    width: 100%;
    text-align: left;
    th {
      @extend strong;
    }
    th,
    td {
      padding-right: 0.5em;
      &:last-of-type {
        padding-right: 0;
      }
    }
    code {
      white-space: normal;
    }
  }
  hr {
    margin-top: $v*1;
    margin-bottom: $v*1;
    border: 0;
    height: $v;
    text-align: center;
    &:after {
      font-size: $font-size--large;
      letter-spacing: 0.75em;
      content: '···';
    }
  }
  sup {
    font-size: $font-size--smaller;
    vertical-align: baseline;
    position: relative;
    top: -0.4em;
  }
  small {
    display: block;
    font-size: $font-size--small;
  }
  .caption {
    @extend small;
    margin-top: -$v*.75;
    margin-bottom: $v*1;
    @extend .faded;
  }
  .footnotes {
    margin-top: $v*2;
    @extend .faded;
  }
}

// page-specific
// -------------

.title {
  @extend strong;
  white-space: nowrap;
}
.header {
  position: relative;
}
.header__inner {
  padding-bottom: $v*0.5;
}
.header--image {
  background-color: $color--blue;
  color: $color--white;
  .header__inner {
    position: relative;
    z-index: 2;
    padding-bottom: $v*3;
    @media (max-width: $bp-sm-md) {
      padding-bottom: $v*2;
    }
  }
}
.header__image {
  background-size: 100% 100%;
  background-position: 0 0;
  background-repeat: no-repeat;
  opacity: 0.666667;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
}
.nav {
  padding-top: $v*1;
  margin-bottom: $v*4;
  @media (max-width: $bp-md-lg) {
    margin-bottom: $v*3;
  }
  @media (max-width: $bp-sm-md) {
    padding-top: $v*0.75;
  }
}
.nav__items {
  text-align: right;
  @media (max-width: $bp-nav) {
    text-align: left;
  }
}
.nav__item {
  display: inline;
  margin-left: 0.75em;
  margin-right: 0.75em;
  @media (max-width: $bp-sm-md) {
    margin-left: 0.5em;
    margin-right: 0.5em;
  }
  &:first-of-type {
    margin-left: 0;
  }
  &:last-of-type {
    margin-right: 0;
  }
}
.nav__col {
  &:first-child {
    width: 4/12*100%;
    @media (max-width: $bp-nav) {
      width: 100%;
    }
  }
  &:last-child {
    width: 8/12*100%;
    @media (max-width: $bp-nav) {
      width: 100%;
    }
  }
}
.footer {
  background-color: $color--silver;
  padding-top: $v*3;
  padding-bottom: $v*3;
  @media (max-width: $bp-sm-md) {
    padding-top: $v*2;
    padding-bottom: $v*2;
  }
}
.footer__col-2 {
  text-align: center;
  @media (max-width: $bp-sm-md) {
    text-align: left;
  }
}
.footer__col-3 {
  text-align: right;
  @media (max-width: $bp-sm-md) {
    text-align: left;
  }
}
.banner {
  text-align: center;
}
.banner__title {
  font-size: 3.333333em;
  line-height: 1;
  max-width: 13.5em;
  @extend strong;
  @media (max-width: $bp-md-lg) {
    font-size: 2.75em;
  }
  @media (max-width: $bp-sm-md) {
    font-size: 2.5em;
  }
  @media (max-width: $bp-xs-sm) {
    font-size: 2em;
  }
  margin-left: auto;
  margin-right: auto;
}
.banner__button {
  margin-top: $v;
}
.main {
  display: block;
  margin-bottom: $v*4;
}
.main--index,
.main--page {
  margin-top: $v*3;
  @media (max-width: $bp-sm-md) {
    margin-top: $v*2;
  }
}
.main__title {
  @extend strong;
  font-size: 1.5em; // same as .rte h2
  line-height: 1.2;
  @media (max-width: $bp-sm-md) {
    font-size: 1.333333em;
  }
  margin-bottom: $v;
}
.main__footer {
  margin-top: $v*4;
  margin-bottom: -$v*2;
}
.tabs {
  margin-bottom: $v*3;
  @media (max-width: $bp-sm-md) {
    margin-bottom: $v*2;
  }
  border-bottom: 1px solid $color--hr;
}
.tab {
  display: inline-block;
  @extend .sc;
  margin-right: 1em;
}
/* ... */

